tests/invalid/sub_c.err_exp
sub_c.m:015: In module `sub_c': error:
sub_c.m:015:   the absence of an `:- import_module' or `:- use_module'
sub_c.m:015:   declaration for `sub_a' prevents access to the
sub_c.m:015:   `:- import_module' declaration for its child module
sub_c.m:015:   `sub_a.sub1'.
